started learning margin and psdding

--- a/index.html
+++ b/index.html
@@ -8,32 +8,33 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">    
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
+    <header class="header-nav">
         <!-- навигация ""-->
+        <div class="nav-container">
+            <nav>
+                <a href="./index.html" class="main-logo"><span>Web</span> Studio</a>
 
-        <nav>
-            <a href="./index.html" class="main-logo"><span>Web</span> Studio</a>
-
-            <ul class="site-nav">
-                <li><a href="./index.html" class="link current">Студия</a></li>
-                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
-            </ul>
-            
+                <ul class="site-nav">
+                    <li><a href="./index.html" class="link current link-studio">Студия</a></li>
+                    <li><a href="./portfolio.html" class="link link-portfolio">Портфолио</a></li>
+                    <li><a href="" class="link link-contacts">Контакты</a></li>
+                </ul>
+            </nav>     
             <ul class="contacts-nav">
-                <li><a href="" class="link">info@devstudio.com</a></li>
-                <li><a href="" class="link">+38 096 111 11 11</a></li>
+                <li><a href="" class="link link-email">info@devstudio.com</a></li>
+                <li><a href="" class="link link-tel">+38 096 111 11 11</a></li>
             </ul>
-        </nav>    
+        </div>   
     </header>
     <main>
         <!-- секция hero -->
-        <section>
-            <h1 class="hero ">Эффективные решения для вашего бизнеса</h1>
-            <a href="" class="button">Заказать услугу</a>
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <a href="" class="button">Заказать услугу </a>
         </section>
         <!-- секция "Наши преимущества"-->
         <section>
