--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 <body>
     <header >
         <!-- навигация ""-->
-        <div class="container">
-            <nav>
+        <div class="container main-nav-container">
+            <nav  class="main-nav">
                 <a href="./index.html" class="main-logo"><span>Web</span> Studio</a>
 
                 <ul class="site-nav">
-                    <li><a href="./index.html" class="link current link-studio">Студия</a></li>
-                    <li><a href="./portfolio.html" class="link  link-portfolio">Портфолио</a></li>
-                    <li><a href="" class="link link-contacts">Контакты</a></li>
+                    <li class="item"><a href="./index.html" class="link current link-studio">Студия</a></li>
+                    <li class="item"><a href="./portfolio.html" class="link  link-portfolio">Портфолио</a></li>
+                    <li class="item"><a href="" class="link link-contacts">Контакты</a></li>
                 </ul>
-            </nav>     
+            </nav>    
             <ul class="contacts-nav">
-                <li><a href="" class="link link-email">info@devstudio.com</a></li>
-                <li><a href="" class="link link-tel">+38 096 111 11 11</a></li>
+                <li class="item"><a href="" class="link link-email">info@devstudio.com</a></li>
+                <li class="item"><a href="" class="link link-tel">+38 096 111 11 11</a></li>
             </ul>
         </div>   
     </header>
@@ -39,29 +39,29 @@
         <!-- секция "Наши преимущества"-->
         <section class="section ">
             <div class="container ">
-                <ul>
-                    <li>
+                <ul class="main-advantages">
+                    <li class="advantages-box">
                         <div class="attention-to-detail advantages">
                             <img src="./img-index/img-1.svg" alt="Внимание к деталям" width="65px">
                         </div>
                         <h3 class=" advantages-title">Внимание к деталям</h3>
                         <p class="advantages-paragraph">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li>
+                    <li class="advantages-box">
                         <div class="punctuality advantages">
                             <img src="./img-index/img-2.svg" alt="Пунктуальность" width="67px">
                         </div>
                         <h3 class=" advantages-title">Пунктуальность</h3>
                         <p class="advantages-paragraph">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li>
+                    <li class="advantages-box">
                         <div class="planning advantages">
                             <img src="./img-index/img-3.svg" alt="Планирование" width="70px">
                         </div>
                         <h3 class=" advantages-title">Планирование</h3>
                         <p class="advantages-paragraph">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li>
+                    <li class="advantages-box">
                         <div class="modern-technologies advantages">
                             <img src="./img-index/img-4.svg" alt="Современные технологии" width="55px">
                         </div>
@@ -75,14 +75,14 @@
         <section class="section ">
             <div class="container">
                 <h2 class="what-doing-title ">Чем мы занимаемся</h2>
-                <ul>
-                <li><img src="./img-index/img-what-doing-1.jpg" alt="Десктопные приложения" width="370px">
+                <ul class="what-doing-main">
+                <li class="what-doing-box"><img src="./img-index/img-what-doing-1.jpg" alt="Десктопные приложения" width="370px" class="what-doing-img">
                         <p class="what-doing-words">Десктопные приложения</p>
                 </li>
-                <li><img src="./img-index/img-what-doing-2.jpg" alt="Мобильные приложения" width="370px">
+                <li class="what-doing-box"><img src="./img-index/img-what-doing-2.jpg" alt="Мобильные приложения" width="370px" class="what-doing-img">
                     <p class="what-doing-words">Мобильные приложения</p>
                 </li>
-                <li><img src="./img-index/img-what-doing-3.jpg" alt="Дизайнерские решения" width="370px">
+                <li class="what-doing-box"><img src="./img-index/img-what-doing-3.jpg" alt="Дизайнерские решения" width="370px" class="what-doing-img">
                     <p class="what-doing-words">Дизайнерские решения</p>
                 </li>
             </ul>
@@ -92,8 +92,8 @@
         <section class="section ">
             <div class="container">
                 <h2 class="team-title">Наша команда</h2>
-                <ul>
-                    <li><img src="./img-index/img-team-1.jpg" alt="Николай Кучеренко" width="270px" class="team-img">
+                <ul class="team-main">
+                    <li class="team-box"><img src="./img-index/img-team-1.jpg" alt="Николай Кучеренко" width="270px" class="team-img">
                         <h3 class="name">Николай Кучеренко</h3>
                         <p class="job">Product Designer</p>
                         <ul>
@@ -103,7 +103,7 @@
                         <li><a href="" aria-label="linkedin"></a></li>
                         </ul>
                     </li>
-                    <li><img src="./img-index/img-team-2.jpg" alt="Ольга Иванова" width="270px" class="team-img">
+                    <li class="team-box"><img src="./img-index/img-team-2.jpg" alt="Ольга Иванова" width="270px" class="team-img">
                         <h3 class="name">Ольга Иванова</h3>
                         <p class="job">Frontend Developer</p>
                         <ul>
@@ -113,7 +113,7 @@
                             <li><a href="" aria-label="linkedin"></a></li>
                         </ul>
                     </li>
-                    <li><img src="./img-index/img-team-3.jpg" alt="Андрей Шевченко" width="270px" class="team-img">
+                    <li class="team-box"><img src="./img-index/img-team-3.jpg" alt="Андрей Шевченко" width="270px" class="team-img">
                         <h3 class="name">Андрей Шевченко</h3>
                         <p class="job">Marketing</p>
                         <ul>
@@ -123,7 +123,7 @@
                         <li><a href="" aria-label="linkedin"></a></li>
                         </ul>
                     </li>
-                    <li>    <img src="./img-index/img-team-4.jpg" alt="Иван Николаев" width="270px" class="team-img">
+                    <li class="team-box">    <img src="./img-index/img-team-4.jpg" alt="Иван Николаев" width="270px" class="team-img">
                         <h3 class="name">Иван Николаев</h3>
                         <p class="job">UI Designer</p>
                         <ul>
@@ -140,13 +140,13 @@
         <section class="section ">
             <div class="container">
                 <h2 class="always-clients-title">Постоянные клиенты</h2>
-                <ul class="logo">
-                    <li><a href=""><img src="./img-index/logo-4.svg" alt="YA & CO" width="44px" class="logo-ya-co"></a></li>
-                    <li><a href=""><img src="./img-index/logo-1.svg" alt="Company" width="40px" class="logo-company-second"></a></li>
-                    <li><a href=""><img src="./img-index/logo-2.svg" alt="Company" width="41px" class="logo-company-third"></a></li>
-                    <li><a href=""><img src="./img-index/logo-3.svg" alt="Foster Peters" width="80px" class="logo-foster"></a></li>
-                    <li><a href=""><img src="./img-index/logo-5.svg" alt="Brand" width="59px" class="logo-brand"></a></li>
-                    <li><a href=""><img src="./img-index/logo-6.svg" alt="tag-line" width="89px" class="logo-tag"></a></li>
+                <ul class="logo-main">
+                    <li class="logo-box"><a href=""><img src="./img-index/logo-4.svg" alt="YA & CO" width="44px" class="logo-ya-co"></a></li>
+                    <li class="logo-box"><a href=""><img src="./img-index/logo-1.svg" alt="Company" width="40px" class="logo-company-second"></a></li>
+                    <li class="logo-box"><a href=""><img src="./img-index/logo-2.svg" alt="Company" width="41px" class="logo-company-third"></a></li>
+                    <li class="logo-box"><a href=""><img src="./img-index/logo-3.svg" alt="Foster Peters" width="80px" class="logo-foster"></a></li>
+                    <li class="logo-box"><a href=""><img src="./img-index/logo-5.svg" alt="Brand" width="59px" class="logo-brand"></a></li>
+                    <li class="logo-box"><a href=""><img src="./img-index/logo-6.svg" alt="tag-line" width="89px" class="logo-tag"></a></li>
                 </ul>
             </div>
         </section>
