--- a/index.html
+++ b/index.html
@@ -154,23 +154,27 @@
     <!-- подвал сайта -->
     <footer class="footer">
         <div class="footer-container">
-            <a href="./index.html" class="footer-logo"><span>Web</span> Studio</a>
-            <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-            <ul>
-                <li>
-                    <p class="contact-link-com">info@example.com</p>
-                </li>
-                <li>
-                    <p class="contact-link-tel">+38 099 111 11 11</p>
-                </li>
-            </ul>
-            <p class="join">присоединяйтесь</p>
-            <ul>
-                <li><a href="" aria-label="instagram"></a></li>
-                <li><a href="" aria-label="twitter"></a></li>
-                <li><a href="" aria-label="facebook"></a></li>
-                <li><a href="" aria-label="linkedin"></a></li>
-            </ul>
+            <div class="footer-contacts-box">
+                <a href="./index.html" class="footer-logo"><span>Web</span> Studio</a>
+                <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+                <ul>
+                    <li>
+                        <p class="contact-link-com">info@example.com</p>
+                    </li>
+                    <li class="last-li">
+                        <p class="contact-link-tel">+38 099 111 11 11</p>
+                    </li>
+                </ul>
+            </div>
+            <div>
+                <p class="join">присоединяйтесь</p>
+                <ul>
+                    <li><a href="" aria-label="instagram"></a></li>
+                    <li><a href="" aria-label="twitter"></a></li>
+                    <li><a href="" aria-label="facebook"></a></li>
+                    <li><a href="" aria-label="linkedin"></a></li>
+                </ul>
+            </div>
             <!-- <form action="handler.php">
                 <strong class="join">Подпишитесь на рассылку</strong>
                 <input type="text" placeholder="E-mail" width="450px">
